<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">发生意外错误。\n抱歉，给您带来不便。</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新启动</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭程序</string>
    <string name="customactivityoncrash_error_activity_error_details">错误日志</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
    <string name="app_name">罗湖棚改</string>
    <string-array name="todo_type">
        <item>默认</item>
        <item>工作</item>
        <item>学习</item>
        <item>生活</item>
        <item>消费</item>
        <item>娱乐</item>
        <item>家庭</item>
    </string-array>

    <string-array name="todo_priority">
        <item>高</item>
        <item>正常</item>
        <item>低</item>
    </string-array>

    <string-array name="todo_status">
        <item>全部</item>
        <item>待办</item>
        <item>已完成</item>
    </string-array>

    <string-array name="todo_time_state">
        <item>全部</item>
        <item>未过期</item>
        <item>已过期</item>
    </string-array>

    <string name="confirm">确认</string>
    <string name="code">验证码</string>
    <string name="phone_code">获取验证码</string>
    <string name="input_phone_code">请输入验证码</string>
    <string name="new_phone">新手机号</string>
    <string name="input_new_phone">请输入新手机号</string>
    <string name="phone">手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="new_pwd">新密码</string>
    <string name="pwd">密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="about">关于</string>
    <string name="quite">退出登录</string>


    <string name="_xpopup_ext_year">年</string>
    <string name="_xpopup_ext_month">月</string>
    <string name="_xpopup_ext_day">日</string>
    <string name="_xpopup_ext_hours"> </string>
    <string name="_xpopup_ext_minutes"> </string>
    <string name="_xpopup_ext_seconds"> </string>
</resources>