<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.lihang.ShadowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:hl_cornerRadius="5dp"
            app:hl_shadowColor="#0D000000"
            app:hl_shadowLimit="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.czl.base.view.RequiredTextView
                        style="@style/tvTitle"
                        android:text="@string/phone" />

                    <EditText
                        style="@style/editNoBgStyle"
                        android:hint="@string/input_phone" />
                </LinearLayout>

                <View style="@style/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.czl.base.view.RequiredTextView
                        style="@style/tvTitle"
                        android:text="@string/code" />

                    <EditText
                        style="@style/editNoBgStyle"
                        android:hint="@string/input_phone_code" />

                    <com.czl.base.view.CountdownView
                        style="@style/sendCodeStyle"
                        android:text="@string/phone_code" />
                </LinearLayout>

                <View style="@style/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.czl.base.view.RequiredTextView
                        style="@style/tvTitle"
                        android:text="密码" />

                    <EditText
                        style="@style/editNoBgStyle"
                        android:hint="@string/input_pwd" />
                </LinearLayout>

                <View style="@style/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.czl.base.view.RequiredTextView
                        style="@style/tvTitle"
                        android:text="确认密码" />

                    <EditText
                        style="@style/editNoBgStyle"
                        android:hint="请再次输入密码" />
                </LinearLayout>
            </LinearLayout>
        </com.lihang.ShadowLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:theme="@style/circleCheckBox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secret"
                android:textSize="10sp" />
        </LinearLayout>

        <com.github.nikartm.button.FitButton
            style="@style/BtnScreenStyle"
            android:layout_marginTop="40dp"
            android:gravity="center"
            app:fb_backgroundColor="@color/color_00A468"
            app:fb_cornerRadius="8dp"
            app:fb_rippleColor="#DCEDC8"
            app:fb_shape="rectangle"
            app:fb_text="注册"
            app:fb_textColor="@color/white"
            app:fb_textSize="14dp" />


        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="40dp"
            android:paddingTop="20dp"
            android:text="登陆"
            android:textColor="@color/color_333333"
            android:textSize="14sp" />
    </LinearLayout>
</layout>